tests/integration/should-fail/DuplicatePassage.twee
::Start
Start

::Duplicate
Duplicate

::Duplicate
Duplicate
